--- a/mods/backpacked-tfc.pw.toml
+++ b/mods/backpacked-tfc.pw.toml
@@ -1,6 +1,6 @@
 filename = 'backpacked_tfc-1.2.0-forge-1.20.1.jar'
 name = 'Backpacked TFC'
-side = 'server'
+side = 'both'
 x-prismlauncher-loaders = [ 'forge' ]
 x-prismlauncher-mc-versions = [ '1.20.1' ]
 x-prismlauncher-release-type = 'release'
