--- a/mods/corpse-x-curios-api-compat.pw.toml
+++ b/mods/corpse-x-curios-api-compat.pw.toml
@@ -1,6 +1,6 @@
 filename = 'corpsecurioscompat-1.18.x-1.20.x-Forge-2.2.2.jar'
 name = 'Corpse x Curios API Compat'
-side = 'server'
+side = 'both'
 x-prismlauncher-loaders = [ 'forge' ]
 x-prismlauncher-mc-versions = [ '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2', '1.20.3', '1.20.4' ]
 x-prismlauncher-release-type = 'release'
