--- a/mods/global-server-config.pw.toml
+++ b/mods/global-server-config.pw.toml
@@ -1,6 +1,6 @@
 filename = 'global-server-config-forge-1.18.2+-1.0.jar'
 name = 'Global Server Config'
-side = 'server'
+side = 'both'
 x-prismlauncher-loaders = [ 'forge' ]
 x-prismlauncher-mc-versions = [ '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2', '1.20.3', '1.20.4' ]
 x-prismlauncher-release-type = 'release'
