--- a/mods/terrafirmacraft-ars-nouveau-compatibility.pw.toml
+++ b/mods/terrafirmacraft-ars-nouveau-compatibility.pw.toml
@@ -1,6 +1,6 @@
 filename = 'tfcan-1.0-SNAPSHOT.jar'
 name = 'TerraFirmaCraft Ars Nouveau Compatibility'
-side = 'server'
+side = 'both'
 x-prismlauncher-loaders = [ 'forge' ]
 x-prismlauncher-mc-versions = [ '1.20.1', '1.20.2', '1.20.3', '1.20.4', '1.20.5', '1.20.6' ]
 x-prismlauncher-release-type = 'release'
