--- a/mods/tfc-curios-weight.pw.toml
+++ b/mods/tfc-curios-weight.pw.toml
@@ -1,6 +1,6 @@
 filename = 'tfc_curios_weight-1.0.0.jar'
 name = 'TFC Curios Weight'
-side = 'server'
+side = 'both'
 x-prismlauncher-loaders = [ 'forge' ]
 x-prismlauncher-mc-versions = [ '1.20.1' ]
 x-prismlauncher-release-type = 'beta'
