--- a/mods/tfc-curios-weight.pw.toml
+++ b/mods/tfc-curios-weight.pw.toml
@@ -1,15 +1,15 @@
-filename = 'tfc_curios_weight-1.0.0.jar'
-name = 'TFC Curios Weight'
-side = 'server'
-x-prismlauncher-loaders = [ 'forge' ]
-x-prismlauncher-mc-versions = [ '1.20.1' ]
-x-prismlauncher-release-type = 'beta'
+filename = "tfc_curios_weight-1.0.0.jar"
+name = "TFC Curios Weight"
+side = "both"
+x-prismlauncher-loaders = ["forge"]
+x-prismlauncher-mc-versions = ["1.20.1"]
+x-prismlauncher-release-type = "beta"
 
 [download]
-hash = '0c30675b313d26045783d895037fce26c34a6554'
-hash-format = 'sha1'
-mode = 'metadata:curseforge'
-url = ''
+hash = "0c30675b313d26045783d895037fce26c34a6554"
+hash-format = "sha1"
+mode = "metadata:curseforge"
+url = ""
 
 [update.curseforge]
 file-id = 5806641
