--- a/mods/water-flasks.pw.toml
+++ b/mods/water-flasks.pw.toml
@@ -1,16 +1,19 @@
-filename = 'waterflasks-3.0.10.jar'
-name = 'TFC Water Flasks'
-side = 'server'
-x-prismlauncher-loaders = [ 'neoforge', 'forge' ]
-x-prismlauncher-mc-versions = [ '1.20.1' ]
-x-prismlauncher-release-type = 'release'
-x-prismlauncher-version-number = 'waterflasks-3.0.10.jar'
+filename = "waterflasks-3.0.10.jar"
+name = "TFC Water Flasks"
+side = "both"
+x-prismlauncher-loaders = [
+    "neoforge",
+    "forge",
+]
+x-prismlauncher-mc-versions = ["1.20.1"]
+x-prismlauncher-release-type = "release"
+x-prismlauncher-version-number = "waterflasks-3.0.10.jar"
 
 [download]
-hash = 'd9e9fc125bd401601693de6d694bea43c3bf956e'
-hash-format = 'sha1'
-mode = 'metadata:curseforge'
-url = ''
+hash = "d9e9fc125bd401601693de6d694bea43c3bf956e"
+hash-format = "sha1"
+mode = "metadata:curseforge"
+url = ""
 
 [update.curseforge]
 file-id = 7056478
