--- a/mods/cupboard.pw.toml
+++ b/mods/cupboard.pw.toml
@@ -1,16 +1,19 @@
-filename = 'cupboard-1.20.1-3.0.jar'
-name = 'Cupboard utilities'
-side = 'server'
-x-prismlauncher-loaders = [ 'neoforge', 'forge' ]
-x-prismlauncher-mc-versions = [ '1.20.1' ]
-x-prismlauncher-release-type = 'release'
-x-prismlauncher-version-number = 'cupboard-1.20.1-3.0.jar'
+filename = "cupboard-1.20.1-3.0.jar"
+name = "Cupboard utilities"
+side = "both"
+x-prismlauncher-loaders = [
+    "neoforge",
+    "forge",
+]
+x-prismlauncher-mc-versions = ["1.20.1"]
+x-prismlauncher-release-type = "release"
+x-prismlauncher-version-number = "cupboard-1.20.1-3.0.jar"
 
 [download]
-hash = '5ed316401906d8eaf24fccf4e687b009cda39df5'
-hash-format = 'sha1'
-mode = 'metadata:curseforge'
-url = ''
+hash = "5ed316401906d8eaf24fccf4e687b009cda39df5"
+hash-format = "sha1"
+mode = "metadata:curseforge"
+url = ""
 
 [update.curseforge]
 file-id = 7605004
