--- a/mods/tfc-artisanal.pw.toml
+++ b/mods/tfc-artisanal.pw.toml
@@ -1,16 +1,16 @@
-filename = 'artisanal-1.7.5.jar'
-name = 'TFC Artisanal'
-side = 'server'
-x-prismlauncher-loaders = [ 'forge' ]
-x-prismlauncher-mc-versions = [ '1.20.1' ]
-x-prismlauncher-release-type = 'release'
-x-prismlauncher-version-number = 'artisanal-1.7.5.jar'
+filename = "artisanal-1.7.5.jar"
+name = "TFC Artisanal"
+side = "both"
+x-prismlauncher-loaders = ["forge"]
+x-prismlauncher-mc-versions = ["1.20.1"]
+x-prismlauncher-release-type = "release"
+x-prismlauncher-version-number = "artisanal-1.7.5.jar"
 
 [download]
-hash = '18937512566abdb7bfb334820b91c81f6846ad71'
-hash-format = 'sha1'
-mode = 'metadata:curseforge'
-url = ''
+hash = "18937512566abdb7bfb334820b91c81f6846ad71"
+hash-format = "sha1"
+mode = "metadata:curseforge"
+url = ""
 
 [update.curseforge]
 file-id = 7197779
