--- a/mods/tfc-canes.pw.toml
+++ b/mods/tfc-canes.pw.toml
@@ -1,16 +1,16 @@
-filename = 'tfccanes-2.1.2.jar'
-name = 'TFC Canes'
-side = 'server'
-x-prismlauncher-loaders = [ 'forge' ]
-x-prismlauncher-mc-versions = [ '1.20.1' ]
-x-prismlauncher-release-type = 'release'
-x-prismlauncher-version-number = 'tfccanes-2.1.2.jar'
+filename = "tfccanes-2.1.2.jar"
+name = "TFC Canes"
+side = "both"
+x-prismlauncher-loaders = ["forge"]
+x-prismlauncher-mc-versions = ["1.20.1"]
+x-prismlauncher-release-type = "release"
+x-prismlauncher-version-number = "tfccanes-2.1.2.jar"
 
 [download]
-hash = '0c362ed60edfe797f020cc253cade2c732551522'
-hash-format = 'sha1'
-mode = 'metadata:curseforge'
-url = ''
+hash = "0c362ed60edfe797f020cc253cade2c732551522"
+hash-format = "sha1"
+mode = "metadata:curseforge"
+url = ""
 
 [update.curseforge]
 file-id = 6928196
