--- a/index.toml
+++ b/index.toml
@@ -1728,6 +1728,10 @@ file = "mods/simple-clouds.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/simple-voice-chat.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/slate-works.pw.toml"
 metafile = true
 
