--- a/unsup.ini
+++ b/unsup.ini
@@ -1,6 +1,6 @@
 version=1
 source_format=packwiz
-source=https://p1x3l101-10.github.io/firma-prima/main/pack.toml
+source=https://raw.githubusercontent.com/p1x3l101-10/firma-prima/refs/heads/main/unsup.ini
 update_mmc_pack=true
 preset=minecraft
 behavior=auto
