--- a/mods/chisels-bits.pw.toml
+++ b/mods/chisels-bits.pw.toml
@@ -1,6 +1,6 @@
 filename = "chisels-and-bits-forge-20.1.20.jar"
 name = "chisels-and-bits"
-side = ""
+side = "both"
 
 [download]
 hash = "aa88d268371df1d65abcf355ad2d69fa0ce7c603"
