--- a/mods/kubejs-curios.pw.toml
+++ b/mods/kubejs-curios.pw.toml
@@ -1,6 +1,6 @@
 filename = "kubejs_curios_forge_1.20.1-1.0.4.jar"
 name = "KubeJSCurios"
-side = ""
+side = "both"
 
 [download]
 hash = "e09eb503cfb62fec1264321dc605cbcace5a58c9"
