--- a/mods/tfc-arrowheads-aplenty.pw.toml
+++ b/mods/tfc-arrowheads-aplenty.pw.toml
@@ -1,6 +1,6 @@
 filename = "tfc_arch-1.2-forge-1.20.1.jar"
 name = "TFC: Archery Aplenty"
-side = ""
+side = "both"
 
 [download]
 hash = "875b12ab888b18cb3ca683afa3719dbe2d24e8e6"
