--- a/mods/tfc-punishment-for-death.pw.toml
+++ b/mods/tfc-punishment-for-death.pw.toml
@@ -1,6 +1,6 @@
 filename = "TFC_punishment_for_death-1.20.1-1.0.0.16.jar"
 name = "TFC Punishment for Death"
-side = ""
+side = "both"
 
 [download]
 hash = "e411976151d0f9d318839de2a3b5205af1d7b3bd"
