--- a/thingpacks/compat/data/ae2/recipe/network/cells/item_storage_components_cell_64k_part.json
+++ b/thingpacks/compat/data/ae2/recipe/network/cells/item_storage_components_cell_64k_part.json
@@ -3,25 +3,25 @@
   "category": "misc",
   "key": {
     "a": {
-      "item": "ae2:quartz_glass"
+      "tag": "forge:dusts/glowstone"
     },
     "b": {
-      "tag": "forge:dusts/redstone"
+      "item": "firmaprima:circuit/t2"
     },
     "c": {
-      "tag": "ae2:all_certus_quartz"
+      "item": "ae2:cell_component_16k"
     },
     "d": {
-      "tag": "dfc:metal/ingot/platinum"
+      "item": "ae2:quartz_glass"
     }
   },
   "pattern": [
     "aba",
-    "bcb",
-    "ddd"
+    "cdc",
+    "aca"
   ],
   "result": {
-    "item": "ae2:view_cell"
+    "item": "ae2:cell_component_64k"
   },
   "show_notification": true
 }
