--- a/thingpacks/compat/data/ae2/recipe/tools/network_color_applicator.json
+++ b/thingpacks/compat/data/ae2/recipe/tools/network_color_applicator.json
@@ -1,1 +1,27 @@
-{}
+{
+  "type": "minecraft:crafting_shaped",
+  "category": "misc",
+  "key": {
+    "a": {
+      "item": "ae2:formation_core"
+    },
+    "b": {
+      "item": "firmalife:metal/ingot/stainless_steel"
+    },
+    "c": {
+      "item": "ae2:cell_component_4k"
+    },
+    "d": {
+      "item": "ae2:energy_cell"
+    }
+  },
+  "pattern": [
+    "ab ",
+    "bc ",
+    "  d"
+  ],
+  "result": {
+    "count": 1,
+    "id": "ae2:color_applicator"
+  }
+}
