--- a/thingpacks/compat/data/ae2/recipes/network/cells/item_storage_components_cell_4k_part.json
+++ b/thingpacks/compat/data/ae2/recipes/network/cells/item_storage_components_cell_4k_part.json
@@ -16,9 +16,9 @@
     }
   },
   "pattern": [
-    "dad",
-    "aca",
-    "bbb"
+    "aba",
+    "cdc",
+    "aca"
   ],
   "result": {
     "item": "ae2:cell_component_4k"
