--- a/mods/feature-recycler.pw.toml
+++ b/mods/feature-recycler.pw.toml
@@ -1,6 +1,6 @@
 name = "Feature Recycler"
 filename = "Feature-Recycler-forge-1.0.0.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/IAzu52kG/versions/3FYH4FtT/Feature-Recycler-forge-1.0.0.jar"
