--- a/config/tfc_ars_compat/sourceberry.toml
+++ b/config/tfc_ars_compat/sourceberry.toml
@@ -5,7 +5,7 @@ count_per_chunk = 1
 #Number of placement attempts per patch (cluster size). Higher = more bushes in one patch.
 tries_per_patch = 32
 #Biome selectors for this profile. Use biome IDs (e.g. "tfc:plains") or tags starting with # (e.g. "#minecraft:is_overworld").
-biomes = ["#minecraft:is_overworld"]
+biomes = ["tfc:plains", "#tfc_ars_compat:archwood_candidates"]
 #Rarity: average once every N chunks (1 = every chunk). Lower = more frequent.
 rarity_chance = 24
 
